# enumerate

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  enumerate.hpp
src/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt  main.cpp
